# EV2-Engine

./: .clang-format  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  current_notes.md  gl_testapp.code-workspace  renderdoc_cap.cap
3d_tree_ex/: CMakeLists.txt
ev2/: CMakeLists.txt
ev2/include/: ev.h  geometry.h  image.hpp  reference_counted.h  resource.h  singleton.h  util.h  visual_nodes.h
ev2/include/pcg/: grid.hpp  wfc.hpp
ev2/include/renderer/: buffer.h  camera.h  debug_renderer.h  ev_gl.h  mesh.h  render_state.hpp  renderer.h  shader.h  terrain.h  terrain_renderer.h  texture.h
ev2/include/ui/: imgui_impl_glfw.h  ui.hpp
ev2/src/: 2d_geometry.hpp  application.cpp  application.hpp  delegate.hpp  engine.cpp  engine.hpp  ev.cpp  ev.h  ev.hpp  evpch.hpp  geometry.hpp  gltf.h  gltf.hpp  gltf_loader.cpp  image.cpp  image.hpp  input.cpp  input.hpp  physics.cpp  physics.h  physics.hpp  reference_counted.hpp  resource.cpp  resource.h  resource.hpp  singleton.hpp  thread_queue.hpp  timer.hpp  transform.hpp  util.cpp  util.hpp  visual_nodes.cpp  window.cpp  window.hpp
ev2/src/core/: assert.hpp  base.hpp  engine.cpp  engine.hpp  ev.cpp  ev.hpp  exceptions.hpp  filesystem.cpp  filesystem.hpp  log.cpp  log.hpp  platform_detection.hpp  reference_counted.hpp  singleton.hpp
ev2/src/events/: notifier.hpp
ev2/src/io/: csv.hpp  image.cpp  image.hpp  material.hpp  model.cpp  model.hpp  serializers.cpp  serializers.hpp
ev2/src/pcg/: distributions.hpp  grid.hpp  object_database.cpp  object_database.hpp  pcg_node.cpp  pcg_node.hpp  procedural_grid.cpp  procedural_grid.hpp  sc_wfc.cpp  sc_wfc.hpp  sc_wfc_editor.cpp  sc_wfc_editor.hpp  sc_wfc_geometry.hpp  sc_wfc_solver.cpp  sc_wfc_solver.hpp  wfc.cpp  wfc.hpp
ev2/src/renderer/: buffer.cpp  buffer.hpp  camera.h  camera.hpp  debug_renderer.cpp  debug_renderer.h  debug_renderer.hpp  ev_gl.h  ev_gl.hpp  material.cpp  material.h  material.hpp  material_storage.hpp  mesh.cpp  mesh.h  mesh.hpp  render_api.cpp  render_api.hpp  render_state.hpp  renderer.cpp  renderer.hpp  shader.cpp  shader.h  shader.hpp  shader_builder.cpp  shader_builder.hpp  shader_data_type.hpp  terrain.cpp  terrain_renderer.cpp  terrain_renderer.h  terrain_renderer.hpp  texture.cpp  texture.hpp  vao.cpp  vao.h  vao.hpp  vertex_buffer.cpp  vertex_buffer.hpp  vertex_buffer_layout.hpp
ev2/src/renderer/opengl_renderer/: buffer.cpp  buffer.hpp  ev_gl.hpp  gl_buffer.cpp  gl_buffer.hpp  gl_material.cpp  gl_material.hpp  gl_mesh.cpp  gl_mesh.hpp  gl_render_api.cpp  gl_render_api.hpp  gl_renderer.cpp  gl_renderer.hpp  gl_shader.cpp  gl_shader.hpp  gl_texture.cpp  gl_texture.hpp  mesh.cpp  mesh.hpp  render_state.hpp  shader.cpp  shader.hpp  terrain_renderer.cpp  terrain_renderer.hpp  texture.cpp  texture.hpp  vao.cpp  vao.hpp
ev2/src/scene/: node.cpp  node.hpp  procedural_grid.cpp  procedural_grid.hpp  scene.cpp  scene.h  scene.hpp  scene_tree.cpp  scene_tree.hpp  serializers.hpp  visual_nodes.cpp  visual_nodes.h  visual_nodes.hpp
ev2/src/ui/: file_dialog.cpp  file_dialog.hpp  imgui.cpp  imgui.h  imgui.hpp  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_glfw.cpp  imgui_impl_glfw.hpp  imgui_impl_opengl3.cpp  imgui_impl_opengl3.h  imgui_impl_opengl3.hpp  imgui_impl_opengl3_loader.hpp  imgui_internal.h  imgui_internal.hpp  imgui_stdlib.cpp  imgui_tables.cpp  imgui_widgets.cpp  imstb_rectpack.h  imstb_truetype.h  ui.cpp  ui.hpp
ev2/src/ui/ImGuizmo-1.83/: GraphEditor.cpp  GraphEditor.h  ImCurveEdit.cpp  ImCurveEdit.h  ImGradient.cpp  ImGuizmo.cpp  ImSequencer.cpp
scripts/: graph_tsv.py  (+1 more)
test_application/: CMakeLists.txt
test_application/src/: game.cpp  game.h  main.cpp  player.h  tree.cpp  tree.h
test_application/src/pcg/: object_database.cpp  sc_wfc.cpp  sc_wfc.hpp  sc_wfc_editor.hpp  sc_wfc_solver.cpp  sc_wfc_solver.hpp  serializers.hpp  wfc.cpp
(+77 files in other folders)
